# die-nachtigall-svn

trunk/die-nachtigall/: .svnignore  Doxyfile  LICENSE  configure.ac
trunk/die-nachtigall/doc/: ru_Coding Rules.odt
trunk/die-nachtigall/include/nachtigall/common/: String.hpp
trunk/die-nachtigall/include/nachtigall/common/abstract/: IRecoder.hpp
trunk/die-nachtigall/src/: .svnignore  main.cpp
trunk/die-nachtigall/src/common/: String.cpp
