AC_INIT([die-nachtigall], [0.0.1],
        [http://die-nachtigall.freesource.info/bugzilla/])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

dnl Checks for programs. 
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL
AM_PROG_CC_STDC

AC_CONFIG_FILES([
Makefile
src/Makefile
])

AC_OUTPUT
